# aed

./: .gitignore  README.md
Aula-2021-01/: main  main.cpp  test
Aula-2021-01/12-05/: main  main.cpp  retangulo.cpp  retangulo.h
Aula-2021-01/18-05/: ponto.cpp
Pratica01/: Makefile  main  pratica01  pratica01.cpp  veiculo.cpp  veiculo.h
Pratica02/: Makefile  pratica  pratica2.cpp  veiculo.cpp  veiculo.h
practices/practice_01/: CMakeLists.txt  main  pratica01  pratica01.cpp  veiculo.cpp  veiculo.h
practices/practice_02/: CMakeLists.txt  pratica2.cpp  veiculo.cpp  veiculo.h
practices/practice_03/: CMakeLists.txt  IndiceInvalido.cpp  IndiceInvalido.h  aluno.cpp  aluno.h  arranjo.h  funcoes.h  pratica3.cpp
practices/practice_05/: fila.h  fila_array.h  fila_ligada.h  impressora.cpp  lista.h  lista_char.cpp  lista_ligada.h  lista_teste.h  main.cpp  pilha.h  pilha_ligada.h  pilha_test.cpp  pilha_test.h
practices/practice_06/: CMakeLists.txt  hashtable.cpp  hashtable.h  main.cpp  ordenada.cpp  ordenada.h
practices/praica04/: CMakeLists.txt  fila_test.cpp  fila_test.h  impressora.h  lista.h  lista_char.h  lista_teste.cpp  main.cpp  pilha.cpp  pilha.h  polonesa.cpp  polonesa.h
questionario1/: CMakeLists.txt  main.cpp  questao4.cpp
test/: test.cpp
