cmake_minimum_required(VERSION 3.26)
project(praica04)

set(CMAKE_CXX_STANDARD 17)

add_executable(praica04 main.cpp
        pilha_test.cpp
        polonesa.cpp
        pilha.cpp
        pilha.h
        pilha_test.h
        polonesa.h
        fila_test.cpp
        impressora.cpp
        fila.h
        fila_test.h
        impressora.h
        lista_teste.cpp
        lista_teste.h
        lista_char.cpp
        lista_char.h
        lista.h
)
